clusters/vps/apps/mailcow/mailcow-service_ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailcow-web-backend
  namespace: kube-system
spec:
  ports:
  - name: http
    port: 80
    targetPort: 9080 # Points to Mailcow HTTP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: mailcow-web-backend
  namespace: kube-system
subsets:
  - addresses:
      - ip: 10.0.0.79 # internal Ip of the host
    ports:
      - port: 9080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mailcow-web-https
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`mx.nasson.co.za`)
    services:
    - name: mailcow-web-backend
      port: 80
  tls: {}
